# mini-rag

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Procfile  README.md  deploy.sh  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements.txt  seplat.txt  start.sh
app/: config.py  main.py
app/models/: chunking.py  embeddings.py  rag_pipeline.py  retrieval.py
app/services/: llm.py  vector_db.py
frontend/: streamlit_app.py
requirements/: backend.txt  base.txt  frontend.txt
