[project]
name = "mini-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "numpy>=2.3.2",
    "ollama>=0.5.3",
    "openai>=1.102.0",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
    "transformers>=4.56.0",
    "uvicorn>=0.35.0",
    "nltk>=3.8.1",
]
